Feat: Final DB design

--- a/index.html
+++ b/index.html
@@ -132,19 +132,19 @@
 
 						<form id="queryBuilderForm">
 							<label for="entity">Entidad:</label>
-							<select id="entity" onchange="loadFields()">
+							<select id="entity">
 								<option value="customer">Cliente</option>
 								<option value="product">Producto</option>
 								<!-- Entidades -->
 							</select>
 
 							<label for="conditionField">Propiedad:</label>
-							<select id="conditionField" onchange="loadFields()">
+							<select id="conditionField">
 								<option value="Prop">Prop1</option>
 								<option value="Prop">Prop2</option>
 								<!-- Propiedades -->
 							</select>
-							
+
 							<label for="conditionType">Tipo de Condición:</label>
 							<select id="conditionType" name="conditionType">
 								<option value="Equals">Igual a</option>
