docs: :art: Gitignore, LICENCE, README.md

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css'
 			rel='stylesheet'>
 		<link rel="stylesheet" href="/assets/css/style.css">
-		<script src="/assets/js/responsive.js" async></script>
-		<script src="/assets/js/Modules/app.js" defer></script>
+		<script src="/FrontEnd/assets/js/responsive.js" async></script>
+		<script src="/FrontEnd/assets/js/Modules/app.js" defer></script>
 		<title>AdminSite</title>
 	</head>
 	<body>
@@ -58,7 +58,7 @@
 				<span class="divider"></span>
 				<div class="profile">
 					<img
-						src="/assets/img/user-circle-solid-24.png"
+						src="/FrontEnd/assets/img/user-circle-solid-24.png"
 						alt>
 					<ul class="profile-link">
 						<!-- <li><a href="#"><i class='bx bxs-user-circle icon'></i> Profile</a></li>
