feat: :construction: Fetch method

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css'
 			rel='stylesheet'>
-		<link rel="stylesheet" href="/assets/css/style.css">
+		<link rel="stylesheet" href="/FrontEnd/assets/css/style.css">
 		<script src="/FrontEnd/assets/js/responsive.js" async></script>
 		<script src="/FrontEnd/assets/js/Modules/app.js" defer></script>
 		<title>AdminSite</title>
@@ -156,7 +156,7 @@
 							</select>
 
 							<label for="conditionValue">Valor de Condición:</label>
-							<!-- <input type="text" id="conditionValue" name="conditionValue"> -->
+							<input type="text" id="conditionValue" name="conditionValue">
 
 							<button type="button" onclick="getQuery()">Generar Consulta</button>
 						</form>
