--- a/FrontEnd/Pages/sign-in.html
+++ b/FrontEnd/Pages/sign-in.html
@@ -52,7 +52,7 @@
                             <div class="collapse navbar-collapse"
                                 id="navigation">
                                 <ul class="navbar-nav mx-auto">
-                                    <li class="nav-item">
+                                    <!-- <li class="nav-item">
                                         <a
                                             class="nav-link d-flex align-items-center me-2 active"
                                             aria-current="page"
@@ -69,7 +69,7 @@
                                                 class="fa fa-user opacity-6 text-dark me-1"></i>
                                             Profile
                                         </a>
-                                    </li>
+                                    </li> -->
                                     <li class="nav-item">
                                         <a class="nav-link me-2"
                                             href="../pages/sign-up.html">
@@ -135,7 +135,7 @@
                                                 for="rememberMe">Remember me</label>
                                         </div>
                                         <div class="text-center">
-                                            <a href="/index.html">
+                                            <a href="../index.html">
                                                 <button type="button"
                                                     class="btn bg-gradient-primary w-100 my-4 mb-2">Sign
                                                     in</button>
