--- a/FrontEnd/Pages/sign-up.html
+++ b/FrontEnd/Pages/sign-up.html
@@ -37,7 +37,7 @@
               <div class="collapse navbar-collapse"
                 id="navigation">
                 <ul class="navbar-nav mx-auto">
-                  <li class="nav-item">
+                  <!-- <li class="nav-item">
                     <a
                       class="nav-link d-flex align-items-center me-2 active"
                       aria-current="page"
@@ -54,7 +54,7 @@
                         class="fa fa-user opacity-6 text-dark me-1"></i>
                       Profile
                     </a>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                     <a class="nav-link me-2"
                       href="../pages/sign-up.html">
