--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -8,12 +8,12 @@
 		<link rel="stylesheet" href="/FrontEnd/assets/css/style.css">
 		<script src="/FrontEnd/assets/js/responsive.js" async></script>
 		<script src="/FrontEnd/assets/js/Modules/app.js" defer></script>
-		<title>AdminSite</title>
+		<title>GardensApp</title>
 	</head>
 	<body>
 		<!-- SIDEBAR -->
 		<section id="sidebar">
-			<a href="#" class="brand"><i class='bx bxs-smile icon'></i> AdminSite</a>
+			<a href="#" class="brand"><i class='bx bxs-smile icon'></i> GardensApp</a>
 			<ul class="side-menu">
 				<li><a href="#" class="active"><i class='bx bxs-dashboard icon'></i>
 						Dashboard</a></li>
