--- a/FrontEnd/Pages/client.html
+++ b/FrontEnd/Pages/client.html
@@ -19,7 +19,7 @@
 						Dashboard</a></li>
                 <li><a class="active" href="./boss.html"><i class='bx bxs-user icon'></i>Boss</a></li>
                 <li><a class="active" href="./badges.html"><i class='bx bxs-badge icon'></i> Badges</a></li>
-                <li><a class="active" href="./client.html"><i class='bx bxs-dashboard icon'></i> Client</a></li>
+                <li><a class="active" href="#"><i class='bx bxs-dashboard icon'></i> Client</a></li>
                 <li><a class="active" href="./city.html"><i class='bx bxs-city icon'></i> City</a></li>
                 <li><a class="active" href="./state.html"><i class='bx bxs-city icon'></i> State</a></li>
                 <li><a class="active" href="./country.html"><i class='bx bxs-city icon'></i> Country</a></li>
@@ -60,16 +60,16 @@
 
 			<!-- MAIN -->
 			<main>
-				<h1 class="title">Products</h1>
+				<h1 class="title">Client</h1>
 				<ul class="breadcrumbs">
 					<li><a href="#">Home</a></li>
 					<li class="divider">/</li>
-					<li><a href="#" class="active">Products</a></li>
+					<li><a href="#" class="active">Client</a></li>
 				</ul>
 				<div class="data">
 					<div class="content-data">
 						<div class="head">
-							<h3>Products Report</h3>
+							<h3>Client Report</h3>
 						</div>
 						<h2>Selector de Campos con Condiciones LINQ</h2>
 
