--- a/FrontEnd/Pages/office.html
+++ b/FrontEnd/Pages/office.html
@@ -60,16 +60,16 @@
 
 			<!-- MAIN -->
 			<main>
-				<h1 class="title">Products</h1>
+				<h1 class="title">Office</h1>
 				<ul class="breadcrumbs">
 					<li><a href="#">Home</a></li>
 					<li class="divider">/</li>
-					<li><a href="#" class="active">Products</a></li>
+					<li><a href="#" class="active">Office</a></li>
 				</ul>
 				<div class="data">
 					<div class="content-data">
 						<div class="head">
-							<h3>Products Report</h3>
+							<h3>Office Report</h3>
 						</div>
 						<h2>Selector de Campos con Condiciones LINQ</h2>
 
