--- a/FrontEnd/Pages/state.html
+++ b/FrontEnd/Pages/state.html
@@ -21,7 +21,7 @@
                 <li><a class="active" href="./badges.html"><i class='bx bxs-badge icon'></i> Badges</a></li>
                 <li><a class="active" href="./client.html"><i class='bx bxs-dashboard icon'></i> Client</a></li>
                 <li><a class="active" href="./city.html"><i class='bx bxs-city icon'></i> City</a></li>
-                <li><a class="active" href="./state.html"><i class='bx bxs-city icon'></i> State</a></li>
+                <li><a class="active" href="#"><i class='bx bxs-city icon'></i> State</a></li>
                 <li><a class="active" href="./country.html"><i class='bx bxs-city icon'></i> Country</a></li>
                 <li><a class="active" href="./contact.html"><i class='bx bxs-contact icon'></i> Contact</a></li>
                 <li><a class="active" href="./employee.html"><i class='bx bxs-user-pin icon'></i> Employee</a></li>
