--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,35 +13,27 @@
 	<body>
 		<!-- SIDEBAR -->
 		<section id="sidebar">
-			<a href="#" class="brand"><i class='bx bxs-smile icon'></i> GardensApp</a>
+			<a href="#" class="brand"><i class='bx bxs-tree icon'></i> GardensApp</a>
 			<ul class="side-menu">
 				<li><a href="#" class="active"><i class='bx bxs-dashboard icon'></i>
 						Dashboard</a></li>
-				<li class="divider" data-text="main">Main</li>
-				<li>
-					<a href="#"><i class='bx bxs-inbox icon'></i> Elements <i
-							class='bx bx-chevron-right icon-right'></i></a>
-					<ul class="side-dropdown">
-						<li><a href="#">Alert</a></li>
-						<li><a href="#">Badges</a></li>
-						<li><a href="#">Breadcrumbs</a></li>
-						<li><a href="#">Button</a></li>
-					</ul>
-				</li>
-				<li><a href="#"><i class='bx bxs-chart icon'></i> Charts</a></li>
-				<li><a href="#"><i class='bx bxs-widget icon'></i> Widgets</a></li>
-				<li class="divider" data-text="table and forms">Table and forms</li>
-				<li><a href="#"><i class='bx bx-table icon'></i> Tables</a></li>
-				<li>
-					<a href="#"><i class='bx bxs-notepad icon'></i> Forms <i
-							class='bx bx-chevron-right icon-right'></i></a>
-					<ul class="side-dropdown">
-						<li><a href="#">Basic</a></li>
-						<li><a href="#">Select</a></li>
-						<li><a href="#">Checkbox</a></li>
-						<li><a href="#">Radio</a></li>
-					</ul>
-				</li>
+				<li><a class="active" href="./Pages/boss.html"><i class='bx bxs-user icon'></i>Boss</a></li>
+				<li><a class="active" href="./Pages/badges.html"><i class='bx bxs-badge icon'></i> Badges</a></li>
+				<li><a class="active" href="./Pages/client.html"><i class='bx bxs-dashboard icon'></i> Client</a></li>
+				<li><a class="active" href="./Pages/city.html"><i class='bx bxs-city icon'></i> City</a></li>
+				<li><a class="active" href="./Pages/state.html"><i class='bx bxs-city icon'></i> State</a></li>
+				<li><a class="active" href="./Pages/country.html"><i class='bx bxs-city icon'></i> Country</a></li>
+				<li><a class="active" href="./Pages/contact.html"><i class='bx bxs-contact icon'></i> Contact</a></li>
+				<li><a class="active" href="./Pages/employee.html"><i class='bx bxs-user-pin icon'></i> Employee</a></li>
+				<li><a class="active" href="./Pages/office.html"><i class='bx bxs-business icon'></i> Office</a></li>
+				<li><a class="active" href="./Pages/employee.html"><i class='bx bxs-user-plus icon'></i> Employee</a></li>
+				<li><a class="active" href="./Pages/order.html"><i class='bx bxs-store icon'></i> Order</a></li>
+				<li><a class="active" href="./Pages/payment.html"><i class='bx bxs-badge-dollar icon'></i> Payment</a></li>
+				<li><a class="active" href="./Pages/products.html"><i class='bx bxs-coffee icon'></i> Product</a></li>
+
+				<li class="divider" data-text="Reports">Reports</li>
+				<li><a class="active" href="#"><i class='bx bxs-chart icon'></i> Charts</a></li>
+				<li><a class="active" href="#"><i class='bx bxs-widget icon'></i> Widgets</a></li>
 			</ul>
 		</section>
 		<!-- SIDEBAR -->
@@ -63,7 +55,8 @@
 					<ul class="profile-link">
 						<!-- <li><a href="#"><i class='bx bxs-user-circle icon'></i> Profile</a></li>
 						<li><a href="#"><i class='bx bxs-cog'></i> Settings</a></li> -->
-						<li><a href="Pages/sign-in.html"><i class='bx bxs-log-out-circle'></i> Logout</a></li>
+						<li><a href="Pages/sign-in.html"><i class='bx bxs-log-out-circle'></i>
+								Logout</a></li>
 					</ul>
 				</div>
 			</nav>
