feat: :construction: Feat: login, Sign Up, JWT, Datatables

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -6,7 +6,7 @@
 		<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css'
 			rel='stylesheet'>
 		<link rel="stylesheet" href="/FrontEnd/assets/css/style.css">
-		<script src="./FrontEnd/assets/js/responsive.js" async></script>
+		<script src="/FrontEnd/assets/js/responsive.js" async></script>
 		<script src="/FrontEnd/assets/js/Modules/app.js" defer></script>
 		<title>GardensApp</title>
 	</head>
