--- a/FrontEnd/Pages/sign-in.html
+++ b/FrontEnd/Pages/sign-in.html
@@ -101,13 +101,13 @@
                                         <div
                                             class="input-group input-group-outline my-3">
                                             <label class="form-label">Email</label>
-                                            <input type="email"
+                                            <input type="email" id="email"
                                                 class="form-control">
                                         </div>
                                         <div
                                             class="input-group input-group-outline mb-3">
                                             <label class="form-label">Password</label>
-                                            <input type="password"
+                                            <input type="password" id="password"
                                                 class="form-control">
                                         </div>
                                         <div
@@ -122,6 +122,7 @@
                                         <div class="text-center">
                                             <a href="../index.html">
                                                 <button type="button"
+                                                    id="login-button"
                                                     class="btn bg-gradient-primary w-100 my-4 mb-2">Sign
                                                     in</button>
                                             </a>
@@ -156,5 +157,6 @@
                 </footer>
             </div>
         </main>
+        <script src="../assets/js/Modules/login.js"></script>
     </body>
 </html>
