--- a/FrontEnd/Pages/state.html
+++ b/FrontEnd/Pages/state.html
@@ -51,7 +51,7 @@
 					<ul class="profile-link">
 						<!-- <li><a href="#"><i class='bx bxs-user-circle icon'></i> Profile</a></li>
 						<li><a href="#"><i class='bx bxs-cog'></i> Settings</a></li> -->
-						<li><a href="Pages/sign-in.html"><i class='bx bxs-log-out-circle'></i>
+						<li><a href="../Pages/sign-in.html"><i class='bx bxs-log-out-circle'></i>
 								Logout</a></li>
 					</ul>
 				</div>
