--- a/FrontEnd/Pages/sign-up.html
+++ b/FrontEnd/Pages/sign-up.html
@@ -106,11 +106,12 @@
                       </div>
                       <div class="input-group input-group-outline mb-3">
                         <label class="form-label">Email</label>
-                        <input type="email" class="form-control">
+                        <input id="email" type="email" class="form-control">
                       </div>
                       <div class="input-group input-group-outline mb-3">
                         <label class="form-label">Password</label>
-                        <input type="password" class="form-control">
+                        <input id="password" type="password"
+                          class="form-control">
                       </div>
                       <div class="form-check form-check-info text-start ps-0">
                         <input class="form-check-input" type="checkbox" value
@@ -122,7 +123,7 @@
                         </label>
                       </div>
                       <div class="text-center">
-                        <button type="button"
+                        <button type="submit" id="sign-up"
                           class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Sign
                           Up</button>
                       </div>
@@ -143,7 +144,6 @@
         </div>
       </section>
     </main>
-
+    <script src="../assets/js/Modules/register.js"></script>
   </body>
-
 </html>
