--- a/FrontEnd/Pages/contact.html
+++ b/FrontEnd/Pages/contact.html
@@ -19,8 +19,7 @@
 				<li><a href="../index.html" class="active"><i class='bx bxs-dashboard icon'></i>
 						Dashboard</a></li>
 				<li><a class="active" href="./boss.html"><i class='bx bxs-user icon'></i>Boss</a></li>
-				<li><a class="active" href="./badges.html"><i class='bx bxs-badge icon'></i>
-						Badges</a></li>
+				<li><a class="active" href="./productLine.html"><i class='bx bxs-badge icon'></i> Product Line</a></li>
 				<li><a class="active" href="./client.html"><i class='bx bxs-dashboard icon'></i>
 						Client</a></li>
 				<li><a class="active" href="./city.html"><i class='bx bxs-city icon'></i>
@@ -116,6 +115,8 @@
 
 							<button type="button" onclick="getQuery()">Generar Consulta</button>
 						</form>
+						<br>
+                        <hr>
 						<div class="dash-content">
 							<div class="overview">
 								<div class="title">
