--- a/FrontEnd/Pages/country.html
+++ b/FrontEnd/Pages/country.html
@@ -21,15 +21,16 @@
                         Dashboard</a></li>
                 <li><a class="active" href="./boss.html"><i
                             class='bx bxs-user icon'></i>Boss</a></li>
-                <li><a class="active" href="./productLine.html"><i class='bx bxs-badge icon'></i> Product Line</a></li>
+                <li><a class="active" href="./productLine.html"><i
+                            class='bx bxs-badge icon'></i> Product Line</a></li>
                 <li><a class="active" href="./client.html"><i
                             class='bx bxs-dashboard icon'></i> Client</a></li>
                 <li><a class="active" href="./city.html"><i
                             class='bx bxs-city icon'></i> City</a></li>
                 <li><a class="active" href="./state.html"><i
                             class='bx bxs-city icon'></i> State</a></li>
-                <li><a class="active" href="./country.html"><i
-                            class='bx bxs-city icon'></i> Country</a></li>
+                <li><a class="active" href="#"><i class='bx bxs-city icon'></i>
+                        Country</a></li>
                 <li><a class="active" href="./contact.html"><i
                             class='bx bxs-contact icon'></i> Contact</a></li>
                 <li><a class="active" href="./employee.html"><i
@@ -75,16 +76,16 @@
 
             <!-- MAIN -->
             <main>
-                <h1 class="title">Products</h1>
+                <h1 class="title">Country</h1>
                 <ul class="breadcrumbs">
                     <li><a href="#">Home</a></li>
                     <li class="divider">/</li>
-                    <li><a href="#" class="active">Products</a></li>
+                    <li><a href="#" class="active">Country</a></li>
                 </ul>
                 <div class="data">
                     <div class="content-data">
                         <div class="head">
-                            <h3>Products Report</h3>
+                            <h3>Country Report</h3>
                         </div>
                         <h2>Selector de Campos con Condiciones LINQ</h2>
 
