--- a/FrontEnd/Pages/productLine.html
+++ b/FrontEnd/Pages/productLine.html
@@ -19,7 +19,7 @@
 				<li><a href="../index.html" class="active"><i class='bx bxs-dashboard icon'></i>
 						Dashboard</a></li>
 				<li><a class="active" href="./boss.html"><i class='bx bxs-user icon'></i>Boss</a></li>
-				<li><a class="active" href="#"><i class='bx bxs-badge icon'></i> Badges</a></li>
+				<li><a class="active" href="#"><i class='bx bxs-badge icon'></i> Product Line</a></li>
 				<li><a class="active" href="./client.html"><i class='bx bxs-dashboard icon'></i>
 						Client</a></li>
 				<li><a class="active" href="./city.html"><i class='bx bxs-city icon'></i>
@@ -115,25 +115,25 @@
 
 							<button type="button" onclick="getQuery()">Generar Consulta</button>
 						</form>
+						<br>
+						<hr>
+						<div class="dash-content">
+							<div class="overview">
+								<div class="title">
+									<i class="uil uil-database"></i>
+								</div>
+								<div class="card-body">
+									<table id="example" class="table table-striped" style="width:100%">
+									</table>
+								</div>
+							</div>
+						</div>
 					</div>
 
 				</div>
 			</main>
 			<!-- MAIN -->
 		</section>
-		<br>
-		<hr>
-		<div class="dash-content">
-			<div class="overview">
-				<div class="title">
-					<i class="uil uil-database"></i>
-				</div>
-				<div class="card-body">
-					<table id="example" class="table table-striped" style="width:100%">
-					</table>
-				</div>
-			</div>
-		</div>
 		<script src="../assets/js/Modules/table.js"></script>
 	</body>
 </html>
