--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,7 +18,7 @@
 				<li><a href="#" class="active"><i class='bx bxs-dashboard icon'></i>
 						Dashboard</a></li>
 				<li><a class="active" href="./Pages/boss.html"><i class='bx bxs-user icon'></i>Boss</a></li>
-				<li><a class="active" href="./Pages/badges.html"><i class='bx bxs-badge icon'></i> Badges</a></li>
+				<li><a class="active" href="./Pages/productLine.html"><i class='bx bxs-badge icon'></i> Product Line</a></li>
 				<li><a class="active" href="./Pages/client.html"><i class='bx bxs-dashboard icon'></i> Client</a></li>
 				<li><a class="active" href="./Pages/city.html"><i class='bx bxs-city icon'></i> City</a></li>
 				<li><a class="active" href="./Pages/state.html"><i class='bx bxs-city icon'></i> State</a></li>
