--- a/FrontEnd/Pages/client.html
+++ b/FrontEnd/Pages/client.html
@@ -28,8 +28,7 @@
 				<li><a href="../index.html" class="active"><i class='bx bxs-dashboard icon'></i>
 						Dashboard</a></li>
 				<li><a class="active" href="./boss.html"><i class='bx bxs-user icon'></i>Boss</a></li>
-				<li><a class="active" href="./badges.html"><i class='bx bxs-badge icon'></i>
-						Badges</a></li>
+				<li><a class="active" href="./productLine.html"><i class='bx bxs-badge icon'></i> Product Line</a></li>
 				<li><a class="active" href="#"><i class='bx bxs-dashboard icon'></i> Client</a></li>
 				<li><a class="active" href="./city.html"><i class='bx bxs-city icon'></i>
 						City</a></li>
