Feat: Reports Module

--- a/FrontEnd/Pages/client.html
+++ b/FrontEnd/Pages/client.html
@@ -50,6 +50,9 @@
 							class='bx bxs-badge-dollar icon'></i> Payment</a></li>
 				<li><a class="active" href="./products.html"><i class='bx bxs-coffee icon'></i>
 						Product</a></li>
+						<li class="divider" data-text="Reports">Reports</li>
+						<li><a class="active" href="../Pages/reports.html"><i
+									class='bx bxs-chart icon'></i> Charts</a></li>
 			</ul>
 		</section>
 		<!-- SIDEBAR -->
