--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -18,21 +18,34 @@
 				<li><a href="#" class="active"><i class='bx bxs-dashboard icon'></i>
 						Dashboard</a></li>
 				<li><a class="active" href="./Pages/boss.html"><i class='bx bxs-user icon'></i>Boss</a></li>
-				<li><a class="active" href="./Pages/productLine.html"><i class='bx bxs-badge icon'></i> Product Line</a></li>
-				<li><a class="active" href="./Pages/client.html"><i class='bx bxs-dashboard icon'></i> Client</a></li>
-				<li><a class="active" href="./Pages/city.html"><i class='bx bxs-city icon'></i> City</a></li>
-				<li><a class="active" href="./Pages/state.html"><i class='bx bxs-city icon'></i> State</a></li>
-				<li><a class="active" href="./Pages/country.html"><i class='bx bxs-city icon'></i> Country</a></li>
-				<li><a class="active" href="./Pages/contact.html"><i class='bx bxs-contact icon'></i> Contact</a></li>
-				<li><a class="active" href="./Pages/employee.html"><i class='bx bxs-user-pin icon'></i> Employee</a></li>
-				<li><a class="active" href="./Pages/office.html"><i class='bx bxs-business icon'></i> Office</a></li>
-				<li><a class="active" href="./Pages/employee.html"><i class='bx bxs-user-plus icon'></i> Employee</a></li>
-				<li><a class="active" href="./Pages/order.html"><i class='bx bxs-store icon'></i> Order</a></li>
-				<li><a class="active" href="./Pages/payment.html"><i class='bx bxs-badge-dollar icon'></i> Payment</a></li>
-				<li><a class="active" href="./Pages/products.html"><i class='bx bxs-coffee icon'></i> Product</a></li>
+				<li><a class="active" href="./Pages/productLine.html"><i
+							class='bx bxs-badge icon'></i> Product Line</a></li>
+				<li><a class="active" href="./Pages/client.html"><i
+							class='bx bxs-dashboard icon'></i> Client</a></li>
+				<li><a class="active" href="./Pages/city.html"><i class='bx bxs-city icon'></i>
+						City</a></li>
+				<li><a class="active" href="./Pages/state.html"><i class='bx bxs-city icon'></i>
+						State</a></li>
+				<li><a class="active" href="./Pages/country.html"><i
+							class='bx bxs-city icon'></i> Country</a></li>
+				<li><a class="active" href="./Pages/contact.html"><i
+							class='bx bxs-contact icon'></i> Contact</a></li>
+				<li><a class="active" href="./Pages/employee.html"><i
+							class='bx bxs-user-pin icon'></i> Employee</a></li>
+				<li><a class="active" href="./Pages/office.html"><i
+							class='bx bxs-business icon'></i> Office</a></li>
+				<li><a class="active" href="./Pages/employee.html"><i
+							class='bx bxs-user-plus icon'></i> Employee</a></li>
+				<li><a class="active" href="./Pages/order.html"><i class='bx bxs-store icon'></i>
+						Order</a></li>
+				<li><a class="active" href="./Pages/payment.html"><i
+							class='bx bxs-badge-dollar icon'></i> Payment</a></li>
+				<li><a class="active" href="./Pages/products.html"><i
+							class='bx bxs-coffee icon'></i> Product</a></li>
 
 				<li class="divider" data-text="Reports">Reports</li>
-				<li><a class="active" href="#"><i class='bx bxs-chart icon'></i> Charts</a></li>
+				<li><a class="active" href="./Pages/reports.html"><i
+							class='bx bxs-chart icon'></i> Charts</a></li>
 				<li><a class="active" href="#"><i class='bx bxs-widget icon'></i> Widgets</a></li>
 			</ul>
 		</section>
