--- a/FrontEnd/Pages/state.html
+++ b/FrontEnd/Pages/state.html
@@ -19,7 +19,8 @@
 				<li><a href="../index.html" class="active"><i class='bx bxs-dashboard icon'></i>
 						Dashboard</a></li>
 				<li><a class="active" href="./boss.html"><i class='bx bxs-user icon'></i>Boss</a></li>
-				<li><a class="active" href="./productLine.html"><i class='bx bxs-badge icon'></i> Product Line</a></li>
+				<li><a class="active" href="./productLine.html"><i class='bx bxs-badge icon'></i>
+						Product Line</a></li>
 				<li><a class="active" href="./client.html"><i class='bx bxs-dashboard icon'></i>
 						Client</a></li>
 				<li><a class="active" href="./city.html"><i class='bx bxs-city icon'></i>
@@ -41,6 +42,9 @@
 							class='bx bxs-badge-dollar icon'></i> Payment</a></li>
 				<li><a class="active" href="./products.html"><i class='bx bxs-coffee icon'></i>
 						Product</a></li>
+				<li class="divider" data-text="Reports">Reports</li>
+				<li><a class="active" href="../Pages/reports.html"><i
+							class='bx bxs-chart icon'></i> Charts</a></li>
 			</ul>
 		</section>
 		<!-- SIDEBAR -->
